kubernetes/apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: websecure
  hostnames:
    - sonarr.sample.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 8989
